--- a/indexers/paseo-hyperbridge/package.json
+++ b/indexers/paseo-hyperbridge/package.json
@@ -11,16 +11,16 @@
   },
   "dependencies": {
     "@hyperbridge/sdk": "^1.4.7",
+    "@types/node": "^22.5.4",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "pino": "^9.5.0",
+    "typescript": "^5.6.3",
     "viem": "^2.9.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.5.4",
-    "tsx": "^4.11.0",
-    "typescript": "^5.6.3"
+    "tsx": "^4.11.0"
   }
 }
 
