--- a/indexers/paseo-hyperbridge/package.json
+++ b/indexers/paseo-hyperbridge/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "NODE_ENV=production node dist/index.js",
-    "build": "tsc -p tsconfig.json",
+    "build": "npm install && tsc -p tsconfig.json",
     "lint": "tsc --noEmit"
   },
   "dependencies": {
